Improving test coverage